Changes in links in index-layout1 html page, Make similar changes in all <a> tags of your respective web pages

--- a/index-layout1.html
+++ b/index-layout1.html
@@ -77,62 +77,54 @@
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                     <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="flipInY">
-                                        <li class="dropdown active">
-                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <i class="fa fa-angle-down"></i></a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="index-layout1.html">Home One</a>
-                                                </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/index-layout2.html">Home Two</a>
-                                                </li>
-                                            </ul>
+                                        <li>
+                                            <a href="index-layout1.html">Home</a>
                                         </li>
-                                        <li><a href="http://irsfoundation.com/tf/templates/EducationPark/about.html">About</a>
+                                        <li><a href="about.html">About</a>
                                         </li>
                                         <li class="dropdown">
                                             <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/courses-grid.html">Courses Grid</a>
+                                                <li><a href="courses-grid.html">Courses Grid</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/courses-left-sidebar.html">Courses left sidebar</a>
+                                                <li><a href="courses-left-sidebar.html">Courses left sidebar</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/courses-right-sidebar.html">Courses right sidebar</a>
-                                                </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html">course single</a>
+                                                <li><a href="course-single.html">course single</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
                                             <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teachers <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher.html">Our teachers</a>
+                                                <li><a href="teacher.html">Our teachers</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html">Teacher single</a>
+                                                <li><a href="teacher-single.html">Teacher single</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
                                             <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-grid.html">Blog Grid</a>
+                                                <li><a href="blog-grid.html">Blog Grid</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html">Blog Single</a>
+                                                <li><a href="blog-single.html">Blog Single</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
                                             <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/service.html">Services</a>
+                                                <li><a href="service.html">Services</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/account.html">My account</a>
+                                                <li><a href="account.html">My account</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/faq.html">faq</a>
+                                                <li><a href="faq.html">faq</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/404.html">404</a>
+                                                <li><a href="404.html">404</a>
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li><a href="http://irsfoundation.com/tf/templates/EducationPark/contact.html">Contact</a>
+                                        <li><a href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -143,9 +135,9 @@
                     </div>
                     <div class="col-md-2 col-sm-12">
                         <div class="irs-log-reg">
-                            <a href="http://irsfoundation.com/tf/templates/EducationPark/account.html">Login</a>
+                            <a href="account.html">Login</a>
                             <span>/</span>
-                            <a href="http://irsfoundation.com/tf/templates/EducationPark/account.html">Register</a>
+                            <a href="account.html">Register</a>
                         </div>
                     </div>
                 </div>
@@ -320,9 +312,9 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html">Computer Science</a></h4>
+                            <h4><a href="course-single.html">Computer Science</a></h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam est dolorem quaerat harum sequi, nesciunt consequatur</p>
-                            <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html" role="button">read more</a>
+                            <a class="btn btn-default irs-btn-transparent-two" href="course-single.html" role="button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -346,9 +338,9 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html">medical science</a></h4>
+                            <h4><a href="course-single.html">medical science</a></h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam est dolorem quaerat harum sequi, nesciunt consequatur</p>
-                            <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html" role="button">read more</a>
+                            <a class="btn btn-default irs-btn-transparent-two" href="course-single.html" role="button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -372,9 +364,9 @@
                             </div>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html">Geometry Course</a></h4>
+                            <h4><a href="course-single.html">Geometry Course</a></h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam est dolorem quaerat harum sequi, nesciunt consequatur</p>
-                            <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html" role="button">read more</a>
+                            <a class="btn btn-default irs-btn-transparent-two" href="course-single.html" role="button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -557,10 +549,10 @@
             <div class="row animatedParent animateOnce">
                 <div class="col-md-3 col-sm-6">
                     <div class="irs-teachers-col animated fadeInUpShort slow delay-250">
-                        <a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html"><img src="images/teachers/1.jpg" alt="">
+                        <a href="teacher-single.html"><img src="images/teachers/1.jpg" alt="">
                         </a>
                         <div class="irs-teachers-name">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html">Rosi Jqulin</a></h4>
+                            <h4><a href="teacher-single.html">Rosi Jqulin</a></h4>
                             <p>math teacher</p>
                         </div>
                         <div class="irs-teachers-social">
@@ -573,10 +565,10 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="irs-teachers-col animated fadeInUpShort slow delay-500">
-                        <a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html"><img src="images/teachers/2.jpg" alt="">
+                        <a href="teacher-single.html"><img src="images/teachers/2.jpg" alt="">
                         </a>
                         <div class="irs-teachers-name">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html">Ross Taylor</a></h4>
+                            <h4><a href="teacher-single.html">Ross Taylor</a></h4>
                             <p>english teacher</p>
                         </div>
                         <div class="irs-teachers-social">
@@ -589,10 +581,10 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="irs-teachers-col animated fadeInUpShort slow delay-750">
-                        <a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html"><img src="images/teachers/3.jpg" alt="">
+                        <a href="teacher-single.html"><img src="images/teachers/3.jpg" alt="">
                         </a>
                         <div class="irs-teachers-name">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html">Jessi Taylor</a></h4>
+                            <h4><a href="teacher-single.html">Jessi Taylor</a></h4>
                             <p>chemistry teacher</p>
                         </div>
                         <div class="irs-teachers-social">
@@ -605,10 +597,10 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="irs-teachers-col animated fadeInUpShort slow delay-1000">
-                        <a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html"><img src="images/teachers/4.jpg" alt="">
+                        <a href="teacher-single.html"><img src="images/teachers/4.jpg" alt="">
                         </a>
                         <div class="irs-teachers-name">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html">Julio Jesus</a></h4>
+                            <h4><a href="teacher-single.html">Julio Jesus</a></h4>
                             <p>history teacher</p>
                         </div>
                         <div class="irs-teachers-social">
@@ -710,9 +702,9 @@
                             </ul>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html">Our system of education</a></h4>
+                            <h4><a href="blog-single.html">Our system of education</a></h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin didunt ut labore et dolore magna aliqua.</p>
-                            <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html" role="button">read more</a>
+                            <a class="btn btn-default irs-btn-transparent-two" href="blog-single.html" role="button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -738,9 +730,9 @@
                             </ul>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html">Our system of education</a></h4>
+                            <h4><a href="blog-single.html">Our system of education</a></h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin didunt ut labore et dolore magna aliqua.</p>
-                            <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html" role="button">read more</a>
+                            <a class="btn btn-default irs-btn-transparent-two" href="blog-single.html" role="button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -766,9 +758,9 @@
                             </ul>
                         </div>
                         <div class="irs-courses-content">
-                            <h4><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html">Our system of education</a></h4>
+                            <h4><a href="blog-single.html">Our system of education</a></h4>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin didunt ut labore et dolore magna aliqua.</p>
-                            <a class="btn btn-default irs-btn-transparent-two" href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html" role="button">read more</a>
+                            <a class="btn btn-default irs-btn-transparent-two" href="blog-single.html" role="button">read more</a>
                         </div>
                     </div>
                 </div>
@@ -873,7 +865,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="irs-copyright">
-                        <p>Copyright© 2017. Design by <a href="https://themeforest.net/user/irs_soft">irs_soft</a>
+                        <p>Copyright© 2017. Design by <a href="#">irs_soft</a>
                         </p>
                     </div>
                 </div>
