Nav bar changed

--- a/work-after-grad.html
+++ b/work-after-grad.html
@@ -80,43 +80,45 @@
                                         <li>
                                             <a href="index-layout1.html">Home</a>
                                         </li>
-                                        <li class="active">
-                                            <a href="#">Work Opportunitites</a>
-                                        </li>
-                                        <li><a href="about.html">About</a>
-                                        </li>
+                                        <!--<li><a href="about.html">About</a>
+                                        </li>-->
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="courses-grid.html">Courses Grid</a>
+                                                <li><a href="courses-grid.html" style="font-size: 13px;">Courses Grid</a>
                                                 </li>
-                                                <li><a href="left-sidebar.html">Courses left sidebar</a>
+                                                <li><a href="courses-left-sidebar.html" style="font-size: 13px;">Courses left sidebar</a>
                                                 </li>
-                                                </li>
-                                                <li><a href="course-single.html">course single</a>
+                                                <li><a href="course-single.html" style="font-size: 13px;">course single</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teachers <i class="fa fa-angle-down"></i></a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Study in India<i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="teacher.html">Our teachers</a>
+                                                <li><a href="teacher.html" style="font-size: 13px;">Why study in India</a>
                                                 </li>
-                                                <li><a href="teacher-single.html">Teacher single</a>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Educational Opportunities</a>
+                                                </li>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Work Opportunities</a>
+                                                </li>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Planning Your Study</a>
+                                                </li>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Study Permits</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <i class="fa fa-angle-down"></i></a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore India <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="blog-grid.html">Blog Grid</a>
+                                                <li><a href="blog-grid.html" style="font-size: 13px;">Indian Culture and Heritage</a>
                                                 </li>
-                                                <li><a href="blog-single.html">Blog Single</a>
+                                                <li><a href="blog-single.html" style="font-size: 13px;">Student Life</a>
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="fa fa-angle-down"></i></a>
+                                        <!--<li class="dropdown">
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="service.html">Services</a>
                                                 </li>
@@ -127,6 +129,8 @@
                                                 <li><a href="404.html">404</a>
                                                 </li>
                                             </ul>
+                                        </li>-->
+                                        <li><a href="faq.html">faq</a>
                                         </li>
                                         <li><a href="contact.html">Contact</a>
                                         </li>
