--- a/about.html
+++ b/about.html
@@ -35,12 +35,12 @@
                 <div class="row">
                     <div class="col-md-2 col-sm-4">
                         <div class="irs-header-top-col irs-center-2">
-                            <p><i class="fa fa-phone" aria-hidden="true"></i> +021 - 123 1012 1211</p>
+                            <!-- <p><i class="fa fa-phone" aria-hidden="true"></i> +021 - 123 1012 1211</p> -->
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4">
                         <div class="irs-header-top-col irs-center-2">
-                            <p><i class="fa fa-clock-o" aria-hidden="true"></i> 10:00 AM - 4:00 PM</p>
+                            <!-- <p><i class="fa fa-clock-o" aria-hidden="true"></i> 10:00 AM - 4:00 PM</p> -->
                         </div>
                     </div>
                     <div class="col-md-3 col-md-offset-5 col-sm-4">
@@ -160,9 +160,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="irs-inner-heading">
-                        <h2>About Us</h2>
+                        <h2>Study Permits</h2>
                         <i class="icofont icofont-education"></i>
-                        <p><a href="http://irsfoundation.com/tf/templates/EducationPark/index-layout1.html">HOME</a> > <a href="about.html#">About</a>
+                        <p><a href="http://irsfoundation.com/tf/templates/EducationPark/index-layout1.html">HOME</a> > <a href="about.html#">Study Permit</a>
                         </p>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
     <!-- Inner page hedaing end -->
 
     <!-- About start -->
-    <section class="irs-about-field">
+    <!-- <section class="irs-about-field">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
@@ -220,11 +220,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- About end -->
 
     <!-- Divider start -->
-    <section class="irs-divider-field parallax irs-layer-black" data-stellar-background-ratio="0.3">
+    <!-- <section class="irs-divider-field parallax irs-layer-black" data-stellar-background-ratio="0.3">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-12">
@@ -243,8 +243,8 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Divider end -->
+    </section> -->
+     --><!-- Divider end
 
     <!-- Discription start -->
     <section class="irs-discription-field">
@@ -252,18 +252,52 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="irs-discription-col">
-                        <h1>Know about <span>Education Park</span></h1>
+                        <h1>How to get permitted? <span></span></h1>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-5">
+                <!-- <div class="col-md-5"> -->
                     <div class="irs-discription-col">
-                        <p class="irs-topdiscription">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqs U enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irur dolor in reprehenderit in voluptate velit esse cillum dolore eu.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqs U enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
+                        <p class="irs-topdiscription">The Indian education system provides immense opportunities for all the international students.Students from various backgrounds and nationality are welcomed here.We celebrate diversity and provide the best experience to the students.</p>
                     </div>
-                </div>
-                <div class="col-md-7">
+                <!-- </div> -->
+                
+                <!-- <div class="col-md-5"> -->
+                    <div class="irs-discription-col">
+                        <p class="irs-topdiscription">India offers various kinds of visas, depending on the purpose of visit. Student visa is a visa specifically for the students to desire to come to India for education purpose. Student Visas are issued for the duration of the academic course of study or for a period of five years whichever is less, on the basis of letters of admission from Universities/recognised colleges or educational institutions in India. The children of NRIs and PIOs cardholders need not procure a student visa. Other international students need student visa or research visa for Doctoral level courses.
+
+                        The students are required to be granted a student visa who wish to come in India.Indian Missions/Posts grant a student visa for a period of five years or for the duration of the course of study, whichever is less, to the below:</p>
+                        <ul>
+                                    <li><i class="zmdi zmdi-dot-circle"></i> To foreigner students coming to India to pursue regular and full time academic studies in India.</li>
+
+                                    <li><i class="zmdi zmdi-dot-circle"></i> For foreigner students coming for Industrial training, summer project and internship.</li>
+
+                                    <li><i class="zmdi zmdi-dot-circle"></i> Provisional student visa valid for six months for the students exploring admission or taking admission tests.</li>
+
+                                    <li><i class="zmdi zmdi-dot-circle"></i> Applicant should possess the proof of admission to a full time regular academic course in a reputed/recognized educational institution in India and evidence of financial support. </li>
+
+                                    <li><i class="zmdi zmdi-dot-circle"></i> The applicant should also possess a “No Objection Certificate” from the Ministry of Health in case of admission in medical or Para-medical course.</li>
+
+                                    <li><i class="zmdi zmdi-dot-circle"></i> Spouse and dependent family members accompanying the applicant must apply for an Entry Visa (Not Tourist Visa. Its termination date will coincide with the period of the principal Visa holder.</li>
+                        </ul>
+                        <p class="irs-topdiscription">Student visas are issued for up to five years, depending on the duration of the course. They can also be extended in India.
+
+
+                        <br>The visa can be applied for from any of the Indian Embassies / High Commission.
+                        <br>The students holding Student Visa of more than 180 days are required to register himself/herself with the local Foreigners Regional Registration Officer (External website that opens in a new window) (FRRO) within 14 days of arrival.
+
+
+
+</p>
+
+                    </div>
+                <!-- </div> -->
+                
+
+
+
+                <<!-- div class="col-md-7">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="irs-discription-col">
@@ -283,14 +317,14 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
     <!-- Discription end  -->
 
     <!-- Counter start -->
-    <section class="irs-counter-field parallax irs-layer-black" data-stellar-background-ratio="0.3">
+   <!--  <section class="irs-counter-field parallax irs-layer-black" data-stellar-background-ratio="0.3">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-6">
@@ -335,11 +369,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Counter end -->
 
     <!-- Newsletter start -->
-    <section class="irs-newsletter-field irs-newsletter-field-two">
+    <!-- <section class="irs-newsletter-field irs-newsletter-field-two">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
@@ -363,7 +397,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Newsletter end -->
 
     <!-- Footer start -->
@@ -373,7 +407,7 @@
                 <div class="col-md-3">
                     <div class="irs-footer-about">
                         <img class="irs-foooter-logo" src="images/footer-logo.png" alt="">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtin eiusmodtin didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                        <p></p>
                         <div class="irs-social">
                             <a href="about.html#"><i class="icofont icofont-social-facebook"></i></a>
                             <a href="about.html#"><i class="icofont icofont-social-twitter"></i></a>
@@ -382,7 +416,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-4">
                     <div class="irs-footer-link">
                         <h4 class="irs-footer-heading">Useful Links</h4>
                         <ul>
@@ -399,7 +433,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <div class="irs-footer-tweets">
                         <h4 class="irs-footer-heading">RECENT TWEETS</h4>
                         <div class="irs-tweets">
@@ -413,8 +447,8 @@
                             <a href="about.html#">about 5 min ago</a>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3">
+                </div> -->
+                <div class="col-md-2">
                     <div class="irs-footer-contact">
                         <h4 class="irs-footer-heading">Contact Us</h4>
                         <img src="images/footer.jpg" alt="">
@@ -443,23 +477,23 @@
     </section>
 
     <!-- script start from here -->
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-dropdownhover.min.js"></script>
-    <script type="text/javascript" src="js/jquery-ui.js"></script>
-    <script type="text/javascript" src="js/jquery-scrolltofixed-min.js"></script>
-    <script type="text/javascript" src="js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
-    <script type="text/javascript" src="js/css3-animate-it.js"></script>
-    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
-    <script type="text/javascript" src="js/jquery.scrollUp.js"></script>
-    <script type="text/javascript" src="js/classie.js"></script>
+     <script type="text/javascript" src="js/jquery.js"></script>
+     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+     <script type="text/javascript" src="js/bootstrap-dropdownhover.min.js"></script>
+     <script type="text/javascript" src="js/jquery-ui.js"></script>
+     <script type="text/javascript" src="js/jquery-scrolltofixed-min.js"></script>
+     <script type="text/javascript" src="js/owl.carousel.min.js"></script>
+     <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+     <script type="text/javascript" src="js/css3-animate-it.js"></script>
+     <script type="text/javascript" src="js/bootstrap-slider.js"></script>
+     <script type="text/javascript" src="js/jquery.scrollUp.js"></script>
+     <script type="text/javascript" src="js/classie.js"></script>
 
     <!-- Custom script for all pages -->
-    <script type="text/javascript" src="js/script.js"></script>
+     <script type="text/javascript" src="js/script.js"></script>
 
     <!-- Funfact START -->
-    <script type="text/javascript">
+     <script type="text/javascript">
         $(document).ready(function($) {
             $('.start-count').each(function() {
                 var $this = $(this);
