--- a/courses-grid.html
+++ b/courses-grid.html
@@ -77,62 +77,62 @@
                                 <!-- Collect the nav links, forms, and other content for toggling -->
                                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                     <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="flipInY">
+                                        <li>
+                                            <a href="index-layout1.html">Home</a>
+                                        </li>
+                                        <!--<li><a href="about.html">About</a>
+                                        </li>-->
                                         <li class="dropdown">
-                                            <a href="courses-grid.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home <i class="fa fa-angle-down"></i></a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/index-layout1.html">Home One</a>
+                                                <li><a href="courses-grid.html" style="font-size: 13px;">Courses Grid</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/index-layout2.html">Home Two</a>
+                                                <li><a href="courses-left-sidebar.html" style="font-size: 13px;">Courses left sidebar</a>
                                                 </li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="http://irsfoundation.com/tf/templates/EducationPark/about.html">About</a>
-                                        </li>
-                                        <li class="dropdown active">
-                                            <a href="courses-grid.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
-                                            <ul class="dropdown-menu">
-                                                <li><a href="courses-grid.html">Courses Grid</a>
-                                                </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/courses-left-sidebar.html">Courses left sidebar</a>
-                                                </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/courses-right-sidebar.html">Courses right sidebar</a>
-                                                </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/course-single.html">course single</a>
+                                                <li><a href="course-single.html" style="font-size: 13px;">course single</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="courses-grid.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Teachers <i class="fa fa-angle-down"></i></a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Study in India<i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher.html">Our teachers</a>
+                                                <li><a href="teacher.html" style="font-size: 13px;">Why study in India</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/teacher-single.html">Teacher single</a>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Educational Opportunities</a>
+                                                </li>
+                                                <li><a href="work-after-grad.html" style="font-size: 13px;">Work Opportunities</a>
+                                                </li>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Planning Your Study</a>
+                                                </li>
+                                                <li><a href="teacher-single.html" style="font-size: 13px;">Study Permits</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="courses-grid.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <i class="fa fa-angle-down"></i></a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Explore India <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-grid.html">Blog Grid</a>
+                                                <li><a href="blog-grid.html" style="font-size: 13px;">Indian Culture and Heritage</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/blog-single.html">Blog Single</a>
+                                                <li><a href="blog-single.html" style="font-size: 13px;">Student Life</a>
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown">
-                                            <a href="courses-grid.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="fa fa-angle-down"></i></a>
+                                        <!--<li class="dropdown">
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/service.html">Services</a>
+                                                <li><a href="service.html">Services</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/account.html">My account</a>
+                                                <li><a href="account.html">My account</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/faq.html">faq</a>
+                                                <li><a href="faq.html">faq</a>
                                                 </li>
-                                                <li><a href="http://irsfoundation.com/tf/templates/EducationPark/404.html">404</a>
+                                                <li><a href="404.html">404</a>
                                                 </li>
                                             </ul>
+                                        </li>-->
+                                        <li><a href="faq.html">faq</a>
                                         </li>
-                                        <li><a href="http://irsfoundation.com/tf/templates/EducationPark/contact.html">Contact</a>
+                                        <li><a href="contact.html">Contact</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -178,7 +178,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="irs-courses-col animated fadeInLeftShort slow delay-250">
                         <div class="irs-courses-img">
-                            <img src="images/courses/1.jpg" alt="">
+                            <img src="" alt="">
                             <div class="irs-time">
                                 <p><a href="courses-grid.html#">10:00 pm - 4:00 pm</a>
                                 </p>
