--- a/index-layout1.html
+++ b/index-layout1.html
@@ -85,12 +85,12 @@
                                         <li class="dropdown">
                                             <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
-                                                <li><a href="courses-grid.html" style="font-size: 13px;">Courses Grid</a>
+                                                <li><a href="undergraduate.html" style="font-size: 13px;">Undergraduate Courses</a>
                                                 </li>
-                                                <li><a href="courses-left-sidebar.html" style="font-size: 13px;">Courses left sidebar</a>
+                                                <li><a href="postgraduate.html" style="font-size: 13px;">Postgraduate Courses</a>
                                                 </li>
-                                                <li><a href="course-single.html" style="font-size: 13px;">course single</a>
-                                                </li>
+                                                <!-- to be removed    <li><a href="course-single.html" style="font-size: 13px;">course single</a>
+                                                </li>-->
                                             </ul>
                                         </li>
                                         <li class="dropdown">
