icons problem resolved

--- a/index-layout1.html
+++ b/index-layout1.html
@@ -9,6 +9,17 @@
     <link href="http://irsfoundation.com/tf/templates/EducationPark/images/apple-icon.png" rel="icon" type="image/png">
     <link href="images/favicon.png" rel="shortcut icon" type="image/png">
 
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="font-awesome/font-awesome-4.7.0/css/font-awesome.min.css">
+    <script src="https://use.fontawesome.com/4e4c1d90ac.js"></script>
+
+    <!--IcoFont-->
+    <link href="css/icofont/css/icofont.css" media="all" rel="stylesheet" type="text/css" />
+
+    <!--MaterialDesign-->
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/material-design-iconic-font/css/material-design-iconic-font.css" media="all" rel="stylesheet" type="text/css" />
+
     <!-- Efinance Title -->
     <title>Education Park - HTML 5 Template</title>
 
@@ -56,7 +67,7 @@
                                             <a href="index-layout1.html">Home</a>
                                         </li>                            
                                         <li class="dropdown">
-                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses</a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="courses-grid.html" style="font-size: 13px;">Undergraduate Courses</a>
                                                 </li>
@@ -67,7 +78,7 @@
                                             </ul>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Study in India</a>
+                                            <a href="index-layout1.html#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Study in India <i class="fa fa-angle-down"></i></a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="teacher.html" style="font-size: 13px;">Why study in India</a>
                                                 </li>
